----------
v2.0.9-git
----------

[jan] Update Turkish translation (İstanbul Technical University).


------
v2.0.8
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[mms] Fix IMAP filtering on combination fields (Bug #11197).
[jan] Fix showing blacklist option to mark message as deleted (Bug #11186).
[jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
[jan] Fix folder names in Procmail rules if using Maildir (Bug #10113).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).
[mms] Application initialization should only be done on first access.


------
v2.0.7
------

[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
[jan] Set Return-Path: in Maildrop vacation driver (rsalmon@mbpgroup.com, Bug
      #10568).


------
v2.0.6
------

[mms] Fix displaying From address in notification when filtering with IMAP
      driver.
[jan] Catch if files don't exist while deleting with VFS transport
      (michael-dev@fami-braun.de, Bug #10494).
[mms] Additional fixes when creating new mailboxes (Bug #10282).


------
v2.0.5
------

[jan] Fix disabling of actions by locking preferences (Bug #10455).
[jan] Sort blacklist and whitelist for display instead of for storage.


------
v2.0.4
------

[mms] Fix creating new mailboxes (Bug #10282).


------
v2.0.3
------

[jan] Add -N parameter to mailbot calls by default (Request #10147).
[jan] Fix notice when using numeric comparisons for spam headers (Bug #10222).
[jan] Respect excluded mail addresses in Maildrop vacation driver (Request
      #10077).
[jan] Fix access to debug handler in Timsieved driver.
[jan] Fix deleting single conditions from a rule (Bug #10253).


------
v2.0.2
------

[jan] Fix moving rules to an explicit position (Bug #10172).
[mms] Fix storage backend conversion script.


------
v2.0.1
------

[mms] Fix folder selection (Bug #9907).
[mms] Fix filtering using the IMAP driver (Bug #9859).


----
v2.0
----
