@@ -2,6 +2,8 @@
 v2.0.9-git
 ----------
 
+[mms] Procmail driver now explicitly sets the base Maildir directory by default
+      (Bug #10113).
 [jan] Update Turkish translation (İstanbul Technical University).
 
 
